# CartDoublePendulum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CartPole.h  CartPoleAnimation.h  ControlSystem.h  SimulationSystem.h  SingalProcessing.h  SystemLinearization.hpp  numerical_integration.hpp  numerical_jacobian.hpp  numerical_solvers.hpp
src/: CartPole.cpp  CartPoleAnimation.cpp  ControlSystem.cpp  EulerRotations.cpp  SignalProcessing.cpp  SimulationSystem.cpp
